rust/kcl-lib/tests/invalid_member_object_prop/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing invalid_member_object_prop.kcl
---
KCL Semantic error

  × semantic: Only numbers (>= 0) can be indexes
   ╭─[2:5]
 1 │ b = true
 2 │ x = b["property"]
   ·     ──────┬──────
   ·           ╰── tests/invalid_member_object_prop/input.kcl
   ╰────
